--- a/riptide_bringup/CMakeLists.txt
+++ b/riptide_bringup/CMakeLists.txt
@@ -1,8 +1,4 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_bringup)
-
-find_package(catkin REQUIRED COMPONENTS roslaunch)
-
+find_package(catkin REQUIRED )
 catkin_package()
-
-include_directories(${catkin_INCLUDE_DIRS})
