--- a/riptide_bringup/package.xml
+++ b/riptide_bringup/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_bringup</name>
-  <version>0.0.15</version>
-  <description>Description of OSU's Riptide AUV.</description>
+  <version>0.0.16</version>
+  <description>System bringup for OSU's Riptide AUV.</description>
 
   <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
 
@@ -14,8 +14,6 @@
   <author email="cary.42@osu.edu">Conor Cary</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>roslaunch</build_depend>
 
   <run_depend>roslaunch</run_depend>
 
