Added depth controller.

--- a/riptide_gazebo/CMakeLists.txt
+++ b/riptide_gazebo/CMakeLists.txt
@@ -40,11 +40,6 @@ add_library(
   src/gazebo_ros_riptide_thrust.cpp
 )
 
-add_library(
-  gazebo_ros_depth_sensor
-  src/gazebo_ros_depth_sensor.cpp
-)
-
 target_link_libraries(
   gazebo_ros_riptide_thrust
   gazebo_ros_depth_sensor
@@ -55,6 +50,22 @@ target_link_libraries(
 
 add_dependencies(
   gazebo_ros_riptide_thrust
+  gazebo_ros_depth_sensor
+  riptide_msgs_gencpp
+)
+
+add_library(
+  gazebo_ros_depth_sensor
+  src/gazebo_ros_depth_sensor.cpp
+)
+
+target_link_libraries(
+  gazebo_ros_depth_sensor
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+)
+
+add_dependencies(
   gazebo_ros_depth_sensor
   riptide_msgs_gencpp
 )
