--- a/riptide_controllers/package.xml
+++ b/riptide_controllers/package.xml
@@ -25,6 +25,7 @@
   <build_depend>roslint</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>riptide_msgs</run_depend>
