Thrust cal became pwm controller

--- a/riptide_controllers/CMakeLists.txt
+++ b/riptide_controllers/CMakeLists.txt
@@ -32,3 +32,7 @@ add_dependencies(thruster_controller riptide_msgs_gencpp imu_3dm_gx4_gencpp)
 add_executable(depth_controller src/depth_controller.cpp)
 target_link_libraries(depth_controller ${catkin_LIBRARIES})
 add_dependencies(depth_controller riptide_msgs_gencpp ${PROJECT_NAME}_gencfg)
+
+add_executable(pwm_controller src/pwm_controller.cpp)
+target_link_libraries(pwm_controller ${catkin_LIBRARIES})
+add_dependencies(pwm_controller riptide_msgs_gencpp ${PROJECT_NAME}_gencfg)
