--- a/riptide_bringup/package.xml
+++ b/riptide_bringup/package.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_bringup</name>
-  <version>0.0.16</version>
+  <version>0.0.17</version>
   <description>System bringup for OSU's Riptide AUV.</description>
 
-  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
+  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>
 
   <license>BSD</license>
 
   <url type="website">http://go.osu.edu/uwrt</url>
   <url type="repository">http://github.com/osu-uwrt/riptide</url>
 
+  <author email="justice.251@osu.edu">Benji Justice</author>
   <author email="cary.42@osu.edu">Conor Cary</author>
 
   <buildtool_depend>catkin</buildtool_depend>
