--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -20,6 +20,7 @@ add_message_files(
     Thrusters.msg
     Bat.msg
     BatStamped.msg
+    Imu.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
