Finished orientation controller

--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -19,3 +19,4 @@ roslint_cpp()
 
 add_executable(imu_processor src/imu_processor.cpp)
 target_link_libraries(imu_processor ${catkin_LIBRARIES})
+add_dependencies(imu_processor riptide_msgs_gencpp ${PROJECT_NAME}_gencfg)
