--- a/riptide_controllers/CMakeLists.txt
+++ b/riptide_controllers/CMakeLists.txt
@@ -34,6 +34,10 @@ add_executable(pwm_controller src/pwm_controller.cpp)
 target_link_libraries(pwm_controller ${catkin_LIBRARIES})
 add_dependencies(pwm_controller riptide_msgs_gencpp ${PROJECT_NAME}_gencfg)
 
+add_executable(orientation_controller src/orientation_controller.cpp)
+target_link_libraries(orientation_controller ${catkin_LIBRARIES})
+add_dependencies(orientation_controller riptide_msgs_gencpp ${PROJECT_NAME}_gencfg)
+
 add_executable(command_combinator src/command_combinator.cpp)
 target_link_libraries(command_combinator ${catkin_LIBRARIES})
 add_dependencies(command_combinator ${PROJECT_NAME}_gencfg)
