Added approx. acceleration calcs; added imu_drift_logger

--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -19,3 +19,6 @@ roslint_cpp()
 
 add_executable(imu_processor src/imu_processor.cpp)
 target_link_libraries(imu_processor ${catkin_LIBRARIES})
+
+add_executable(imu_drift_logger src/imu_drift_logger.cpp)
+target_link_libraries(imu_drift_logger ${catkin_LIBRARIES})
