--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -21,6 +21,7 @@ add_message_files(
     Bat.msg
     BatStamped.msg
     Imu.msg
+    ImuVerbose.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
