Added IMU plugin to simulator

--- a/riptide_gazebo/CMakeLists.txt
+++ b/riptide_gazebo/CMakeLists.txt
@@ -32,7 +32,7 @@ link_directories(
 
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES gazebo_ros_riptide_thrust gazebo_ros_depth_sensor
+  LIBRARIES gazebo_ros_riptide_thrust gazebo_ros_depth_sensor gazebo_ros_riptide_imu
 )
 
 add_library(
@@ -42,7 +42,6 @@ add_library(
 
 target_link_libraries(
   gazebo_ros_riptide_thrust
-  gazebo_ros_depth_sensor
   ${catkin_LIBRARIES}
   ${GAZEBO_LIBRARIES}
   ${Boost_LIBRARIES}
@@ -67,5 +66,21 @@ target_link_libraries(
 
 add_dependencies(
   gazebo_ros_depth_sensor
+  riptide_msgs_gencpp
+)
+
+add_library(
+  gazebo_ros_riptide_imu
+  src/gazebo_ros_riptide_imu.cpp
+)
+
+target_link_libraries(
+  gazebo_ros_riptide_imu
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+)
+
+add_dependencies(
+  gazebo_ros_riptide_imu
   riptide_msgs_gencpp
 )
