--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ add_message_files(
     PwmStamped.msg
     Imu.msg
     ImuVerbose.msg
+    SwitchState.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
