Began updating qualification state machine, created Constants.msg file

--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_autonomy)
 
@@ -15,12 +14,13 @@ rosconsole
 sensor_msgs
 std_msgs
 geometry_msgs
+riptide_msgs
 )
 
 find_package(catkin REQUIRED genmsg actionlib_msgs actionlib)
 add_action_files(
     DIRECTORY action
-    FILES FindGate.action GateAlignment.action PassThruGate.action)
+    FILES Find.action LinearAlign.action)
 generate_messages(DEPENDENCIES std_msgs geometry_msgs actionlib_msgs)
 
 catkin_package(CATKIN_DEPENDS actionlib_msgs)
