--- a/riptide_robot/package.xml
+++ b/riptide_robot/package.xml
@@ -23,6 +23,7 @@
   <run_depend>riptide_gazebo</run_depend>
   <run_depend>riptide_msgs</run_depend>
   <run_depend>riptide_teleop</run_depend>
+  <run_depend>riptide_vision</run_depend>
 
   <export>
     <metapackage />
