Removed altitude from depth sensor node

--- a/riptide_vision/package.xml
+++ b/riptide_vision/package.xml
@@ -24,4 +24,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
+
+  <export>
+  </export>
 </package>
