--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -19,12 +19,14 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>roslaunch</run_depend>
   <run_depend>rosserial_msgs</run_depend>
   <run_depend>rosserial_python</run_depend>
   <run_depend>pointgrey_camera_driver</run_depend>
 
+  <run_depend>message_runtime</run_depend>
   <export>
   </export>
 </package>
