Restructered qualification state machine and began writing new files

--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -14,12 +14,19 @@ sensor_msgs
 std_msgs
 geometry_msgs
 riptide_msgs
+message_generation
 )
 
 find_package(catkin REQUIRED genmsg actionlib_msgs actionlib)
 add_action_files(
-    DIRECTORY action
-    FILES Find.action LinearAlign.action)
+  DIRECTORY action
+  FILES Find.action LinearAlign.action
+)
+
+add_service_files(
+  DIRECTORY srv
+  FILES reset_controllers.srv
+)
 generate_messages(DEPENDENCIES std_msgs geometry_msgs actionlib_msgs)
 
 catkin_package(CATKIN_DEPENDS actionlib_msgs)
