--- a/riptide_controllers/cfg/thruster_config.yaml
+++ b/riptide_controllers/cfg/thruster_config.yaml
@@ -1,24 +1,56 @@
 HPA:
-  POS: -6.449618
-  NEG: -4.886643
+  POS:
+    SLOPE: 6.449618
+    XINT: 1531
+  NEG:
+    SLOPE: 4.886643
+    XINT: 1477
 HPF:
-  POS: -6.042335
-  NEG: -5.222560
-HSF:
-  POS: 6.277069
-  NEG: 5.159923
+  POS:
+    SLOPE: -6.042335
+    XINT: 1476
+  NEG:
+    SLOPE: -5.222560
+    XINT: 1529
 HSA:
-  POS: 6.202313
-  NEG: 5.215345
-SPL:
-  POS: -6.176643
-  NEG: -5.349046
+  POS:
+    SLOPE: -6.202313
+    XINT: 1474
+  NEG:
+    SLOPE: -5.215345
+    XINT: 1524
+HSF:
+  POS:
+    SLOPE: 6.277069
+    XINT: 1536
+  NEG:
+    SLOPE: 5.159923
+    XINT: 1470
 SSL:
-  POS: 6.393562
-  NEG: 5.234392
+  POS:
+    SLOPE: 6.393562
+    XINT: 1526
+  NEG:
+    SLOPE: 5.234392
+    XINT: 1475
+SPL:
+  POS:
+    SLOPE: -6.176643
+    XINT: 1477
+  NEG:
+    SLOPE: -5.349046
+    XINT: 1527
 SWA:
-  POS: -6.239471
-  NEG: -5.444654
+  POS:
+    SLOPE: -6.239471
+    XINT: 1479
+  NEG:
+    SLOPE: -5.444654
+    XINT: 1529
 SWF:
-  POS: 6.621582
-  NEG: 5.161853
+  POS:
+    SLOPE: 6.621582
+    XINT: 1528
+  NEG:
+    SLOPE: 5.161853
+    XINT: 1477
