--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -20,7 +20,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>roslint</build_depend>
   <build_depend>message_generation</build_depend>
-
+  <build_depend>imu_3dm_gx4</build_depend>
+  
   <run_depend>roslaunch</run_depend>
   <run_depend>rosserial_msgs</run_depend>
   <run_depend>rosserial_python</run_depend>
