Added individual reset for roll, pitch, and yaw PID

--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -20,6 +20,10 @@ add_message_files(
     SwitchState.msg
     ObjectData.msg
     GateData.msg
+    ResetControls.msg
+    ControlStatus.msg
+    ControlStatusAngular.msg
+    ControlStatusLinear.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
