--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -18,8 +18,10 @@ add_message_files(
     Imu.msg
     ImuVerbose.msg
     SwitchState.msg
-    ObjectData.msg
+    TaskAlignment.msg
     GateData.msg
+    PoleData.msg
+    BoundingBox.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
