--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -24,6 +24,8 @@ add_message_files(
     ControlStatus.msg
     ControlStatusAngular.msg
     ControlStatusLinear.msg
+    MassVol.msg
+    RotationOut.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
