--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -26,6 +26,7 @@ add_message_files(
     ControlStatus.msg
     ControlStatusAngular.msg
     ControlStatusLinear.msg
+    AlignmentCommand.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
