--- a/riptide_controllers/cfg/vehicle_properties.yaml
+++ b/riptide_controllers/cfg/vehicle_properties.yaml
@@ -1,5 +1,8 @@
-Mass: 35.7
-Volume: 0.0372
-Buoyancy_X_POS: 0.001
-Buoyancy_Y_POS: 0.0
-Buoyancy_Z_POS: 0.04
+Mass: 35.7 # [kg]
+Volume: 0.0372 # [m^3]
+Ixx: 0.52607145 # [kg-m^2]
+Iyy: 1.50451601 # [kg-m^2]
+Izz: 1.62450600 # [kg-m^2]
+Buoyancy_X_POS: 0.001 # [m]
+Buoyancy_Y_POS: 0.0 # [m]
+Buoyancy_Z_POS: 0.04 # [m]
