--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -27,6 +27,7 @@ add_message_files(
     ControlStatusAngular.msg
     ControlStatusLinear.msg
     AlignmentCommand.msg
+    DepthCommand.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
