Added Peter's qualify vision code, improved ps3 controller almost done

--- a/riptide_teleop/CMakeLists.txt
+++ b/riptide_teleop/CMakeLists.txt
@@ -16,6 +16,6 @@ roslint_cpp()
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_executable(ps3_control src/ps3_control.cpp)
-target_link_libraries(ps3_control ${catkin_LIBRARIES})
-add_dependencies(ps3_control ${catkin_EXPORTED_TARGETS})
+add_executable(ps3_controller src/ps3_controller.cpp)
+target_link_libraries(ps3_controller ${catkin_LIBRARIES})
+add_dependencies(ps3_controller ${catkin_EXPORTED_TARGETS})
