--- a/riptide_vision/CMakeLists.txt
+++ b/riptide_vision/CMakeLists.txt
@@ -15,6 +15,6 @@ catkin_package(INCLUDE_DIRS include)
 include_directories(include ${catkin_INCLUDE_DIRS} $(OpenCV_INCLUDE_DIRS))
 find_package(OpenCV REQUIRED)
 
-add_executable(rosbag_to_mp4 src/rosbag_to_mp4.cpp)
-target_link_libraries(rosbag_to_mp4 ${catkin_LIBRARIES})
-add_dependencies(rosbag_to_mp4 ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+add_executable(extract_video src/extract_video.cpp)
+target_link_libraries(extract_video ${catkin_LIBRARIES})
+add_dependencies(extract_video ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
