--- a/riptide_hardware/cfg/camera_forward_spare_cal.yaml
+++ b/riptide_hardware/cfg/camera_forward_spare_cal.yaml
@@ -1,5 +1,5 @@
-# Calibration for Forward Camera with Spare Fisheye Lens
-intrinsic:
+# Calibration for Forward Camera with "spare" Fisheye Lens
+cameraMatrix:
   R0: # Row 0
     C0: 1047.506619677797
     C1: 0.0
@@ -12,7 +12,7 @@ intrinsic:
     C0: 0.0
     C1: 0.0
     C2: 1.0
-distCoeffs:
+distortionCoeffs:
   C0: -0.4419255364292572
   C1: 0.3105946887796641
   C2: 0.00003868058294259321 # 3.868058294259321e-05
