--- a/darknet_ros/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/darknet_ros/CMakeLists.txt
@@ -244,12 +244,12 @@ if (NOT EXISTS "${FILE}")
   execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
 endif()
 
-# Download yolov3.weights
-set(FILE "${PATH}/yolov3.weights")
-message(STATUS "Checking and downloading yolov3.weights if needed ...")
+# Download yolov3-tiny.weights (Don't use yolov3 on Jetson - it's to slow)
+set(FILE "${PATH}/yolov3-tiny.weights")
+message(STATUS "Checking and downloading yolov3-tiny.weights if needed ...")
 if (NOT EXISTS "${FILE}")
   message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3.weights -P ${PATH})
+  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov3-tiny.weights -P ${PATH})
 endif()
 
 #############
@@ -257,13 +257,13 @@ endif()
 #############
 
 if(CATKIN_ENABLE_TESTING)
-  # Download yolov2.weights
+  # Download yolov2-tiny.weights
   set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
   set(FILE "${PATH}/yolov2.weights")
-  message(STATUS "Checking and downloading yolov2.weights if needed ...")
+  message(STATUS "Checking and downloading yolov2-tiny.weights if needed ...")
   if (NOT EXISTS "${FILE}")
     message(STATUS "... file does not exist. Downloading now ...")
-    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
+    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
   endif()
 
   find_package(rostest REQUIRED)
