Added darknet weights (had to remove .gitigonore file). Began revising darknet_ros to work with both camera topics

--- a/darknet_ros/darknet_ros/config/ros.yaml
+++ b/darknet_ros/darknet_ros/config/ros.yaml
@@ -1,7 +1,7 @@
 subscribers:
 
   camera_reading:
-    topic: /forward/image_raw
+    topic: /forward/image_undistorted
     queue_size: 1
 
 actions:
