--- a/darknet_ros/darknet_ros/config/yolov3-tiny_dice5.yaml
+++ b/darknet_ros/darknet_ros/config/yolov3-tiny_dice5.yaml
@@ -3,9 +3,9 @@ yolo_model:
   config_file:
     name: yolov3-tiny_dice5.cfg
   weight_file:
-    name: yolov3-tiny_dice5_40000.weights
+    name: yolov3-tiny_dice5_30000.weights
   threshold:
     value: 0.4
   detection_classes:
     names:
-      - Dice_5
+      - Dice5
