--- a/darknet_ros/darknet_ros/yolo_network_config/cfg/yolov3-tiny_dice5.cfg
+++ b/darknet_ros/darknet_ros/yolo_network_config/cfg/yolov3-tiny_dice5.cfg
@@ -1,10 +1,10 @@
 [net]
 # Testing
-#batch=1
-#subdivisions=1
+batch=1
+subdivisions=1
 # Training
-batch=64
-subdivisions=32 # May need to inc/dec (by multiples of 2) due to computer memory limitations. Inc if training gets killed, or lower batch number.
+#batch=64
+#subdivisions=32 # May need to inc/dec (by multiples of 2) due to computer memory limitations. Inc if training gets killed, or lower batch number.
 width=416
 height=416
 channels=3
