--- a/riptide_teleop/CMakeLists.txt
+++ b/riptide_teleop/CMakeLists.txt
@@ -8,10 +8,13 @@ find_package(catkin REQUIRED
     roscpp
     roslint
     tf
+    sensor_msgs
+    cv_bridge
 )
 
 catkin_package(INCLUDE_DIRS include)
-include_directories(include ${catkin_INCLUDE_DIRS})
+find_package(OpenCV REQUIRED) # To include, OpenCV, this MUST go BEFORE include_directories()
+include_directories(include ${catkin_INCLUDE_DIRS} $(OpenCV_INCLUDE_DIRS))
 roslint_cpp()
 
 add_executable(ps3_controller src/ps3_controller.cpp)
