--- a/riptide_teleop/package.xml
+++ b/riptide_teleop/package.xml
@@ -21,9 +21,15 @@
   <build_depend>roscpp</build_depend>
   <build_depend>roslint</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>OpenCV</build_depend>
 
   <run_depend>joy</run_depend>
   <run_depend>roslaunch</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
+  <run_depend>OpenCV</run_depend>
 
   <export>
   </export>
