Finished HUD add-on for all image output

--- a/riptide_vision/CMakeLists.txt
+++ b/riptide_vision/CMakeLists.txt
@@ -28,6 +28,6 @@ add_executable(extract_video src/extract_video.cpp)
 target_link_libraries(extract_video ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 add_dependencies(extract_video ${catkin_EXPORTED_TARGETS})
 
-add_executable(hud_image src/hud_image.cpp)
-target_link_libraries(hud_image ${catkin_LIBRARIES})
-add_dependencies(hud_image ${catkin_EXPORTED_TARGETS})
+add_executable(hud src/hud.cpp)
+target_link_libraries(hud ${catkin_LIBRARIES})
+add_dependencies(hud ${catkin_EXPORTED_TARGETS} ${OpenCV_LIBRARIES})
