Added camera select from PS3 controller, fixed runtime issue

--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -30,6 +30,7 @@ add_message_files(
     DepthCommand.msg
     Acoustics.msg
     Pneumatics.msg
+    PS3Plane.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs)
