--- a/riptide_controllers/cfg/thruster_config_copro.yaml
+++ b/riptide_controllers/cfg/thruster_config_copro.yaml
@@ -6,6 +6,7 @@ SWA:
   NEG:
     SLOPE: -8.004653
     XINT: 1519
+  Active: True
 SWF:
   POS:
     SLOPE: 7.132864
@@ -13,6 +14,7 @@ SWF:
   NEG:
     SLOPE: 8.081880
     XINT: 1465
+  Active: True
 SPL:
   POS:
     SLOPE: -8.191769
@@ -20,6 +22,7 @@ SPL:
   NEG:
     SLOPE: -7.039311
     XINT: 1517
+  Active: True
 SSL:
   POS:
     SLOPE: 7.982523
@@ -27,6 +30,7 @@ SSL:
   NEG:
     SLOPE: 7.829684
     XINT: 1517
+  Active: True
 HPF: # Previously HSA on old Riptide
   POS:
     SLOPE: -7.954310
@@ -34,13 +38,16 @@ HPF: # Previously HSA on old Riptide
   NEG:
     SLOPE: -6.814752
     XINT: 1519
+  Active: True
 HPA:
   POS:
     SLOPE: 7.334681
     XINT: 1516
+  Active: True
   NEG:
     SLOPE: 8.067786
     XINT: 1460
+  Active: True
 HSA: # Previously HPF on old Riptide
   POS:
     SLOPE: -7.900563
@@ -48,6 +55,7 @@ HSA: # Previously HPF on old Riptide
   NEG:
     SLOPE: -7.168297
     XINT: 1519
+  Active: True
 HSF:
   POS:
     SLOPE: 7.372538
@@ -55,3 +63,4 @@ HSF:
   NEG:
     SLOPE: 8.461324
     XINT: 1463
+  Active: True 
