--- a/riptide_utilities/package.xml
+++ b/riptide_utilities/package.xml
@@ -20,7 +20,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>roslint</build_depend>
   <build_depend>message_generation</build_depend>
-  
+  <build_depend>riptide_msgs</build_depend>
+
   <run_depend>roslaunch</run_depend>
   <run_depend>message_runtime</run_depend>
   <export>
