--- a/darknet_ros/darknet_ros/package.xml
+++ b/darknet_ros/darknet_ros/package.xml
@@ -20,6 +20,7 @@
   <depend>message_generation</depend>
   <depend>darknet_ros_msgs</depend>
   <depend>actionlib</depend>
+  <depend>riptide_msgs</depend>
 
   <!-- Test dependencies -->
   <test_depend>rostest</test_depend>
