--- a/riptide_msgs/package.xml
+++ b/riptide_msgs/package.xml
@@ -19,6 +19,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>darknet_ros_msgs</build_depend>
 
   <run_depend>message_runtime</run_depend>
 
