--- a/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
+++ b/darknet_ros/darknet_ros/config/yolov3-tiny_RoboSub18.yaml
@@ -5,7 +5,7 @@ yolo_model:
   weight_file:
     name: yolov3-tiny_RoboSub18_50000.weights
   threshold:
-    value: 0.4
+    value: 0.1 # Leave small b/c the yolo_processor will handle thresholding
   detection_classes:
     names:
       - Casino_Gate_Black
